Revision history for DBIx-Class-I18NColumns

0.10    05/03/2010
        Docs for row attribute language(). 

0.09    04/13/2010
        Using DBIx::Class::Core as base instead of load module.
        Added sqlt as ia test dependency.

0.08    04/12/2010
        Getting out ForceUTF8(deprecated) dependency.

0.07    04/05/2010
        Let i18n fields be undef or empty string on set.

0.06    04/05/2010
        Overloaded insert() to manage language.
        Overloaded ResultSet::new_result to be able to set i18n columns 
        on rs->new({}).
        
0.05    04/02/2010
        Propagate sqlt_deploy_hook to the auto-created resultsource.
        Create a new column on the rs to make dirty when a i18n related
        row is dirty (and also use this column to cache languages).
        
0.04    03/30/2010
        Hard changes to the way 18n related RS works. Now
        the auto-created RS has one column per defined one.
        Docs updated.
        More tests.

0.03    03/24/2010
        Added parent as a dependency.
        Better order in docs.

0.02    03/24/2010
        Overloaded all() to propagate language to rows.
        Better docs and a TODO section.

0.01    03/23/2010
        First version, released on an unsuspecting world.
